--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-input[type=text]{width:300px}
+body{box-sizing:border-box;font:14px;padding:1em}main{margin-left:auto;margin-right:auto;width:70%}input[type=text]{width:300px;padding:.25em}.todo{margin:1em 0}
