--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,21 +2,65 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
 body {
   box-sizing: border-box;
-  font: 14px;
-  padding: 1em;
 }
 
-main {
-  @include center;
-  width: 70%;
-}
 input[type="text"] {
-  width: 300px;
-  padding: .25em;
+  font-size: 1.5em;
+  padding: 1em;
+  margin-bottom: 0;
 }
 
-.todo {
-  margin: 1em 0 1em 0;
+input[type="submit"] {
+  font-size: 1.5em;
+}
+
+.todoList {
+  border: 1px solid black;
+  h2 {
+    border-bottom: 1px solid black;
+  }
+  .todo {
+    font-size: 1.1em;
+    padding: .25em 0 .25em 0;
+    margin: .25em 0em .25em 0em;
+    border-bottom: 1px dotted rgba(128, 128, 128, 0.28);;
+    .todo-delete {
+      font-size: 1.5em;
+    }
+  }
+
+
+
+}
+
+@keyframes my_animation {
+  from {
+    max-height: 85vh;
+  }
+  to {
+    max-height: 0;
+  }
+}
+
+.ng-enter {
+    max-height: 0px;
+    transition: 1s;
+    transform: translateY(-4em);
+}
+.ng-enter-active {
+    max-height: 85vh;
+    transform: translateY(0px);
+}
+
+.ng-leave {
+  transition: .7s;
+  transform: scale(1);
+}
+.ng-leave-active {
+  transform: scale(0);
+  animation: .7s my_animation;
 }
