--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@ input[type="submit"] {
   border: 1px solid black;
   h2 {
     border-bottom: 1px solid black;
+    margin-bottom: 0;
   }
   .todo {
     font-size: 1.1em;
