Add focus for button Signed-off-by: Todd Robinson <toddsinclairrobinson@gmail.com>

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ body {
 .button {
   font-family: 'VT323',monospace;
   background-color: #2ecc71;
-  &:hover {
+  &:hover, &:focus {
     background-color: #27ae60;
   }
 }
